tests/NormalTests/paczka1/fuzzy1/57549785.err
Error in line 4: zKUcvwYRxm S721 79,1
Error in line 11: S736 S736 48,7
Error in line 7: zKUcvwYRxm A80 13,0
Error in line 24: S736 A80 87,1
Error in line 26: S736 S736 37,2
Error in line 33: x90 S721 35,3
